2019-02-15         Arnold D. Robbins     <arnold@skeeve.com>

	* inplace.c (do_inplace_end): Fix error message to use inplace::end.
	Thanks to Jean-Philippe Guerard
	<jean-philippe.guerard@xn--tigreray-i1a.org> for the report.

2018-12-18         Arnold D. Robbins     <arnold@skeeve.com>

	* Makefile.am (distclean-local): Remove .deps directory.

2018-09-16         Arnold D. Robbins     <arnold@skeeve.com>

	* Makefile.in, aclocal.m4, configure: Regenerated, using
	Automake 1.16.1.

2018-04-08         Arnold D. Robbins     <arnold@skeeve.com>

	* .gitignore: Ignore libtool itself.

2018-03-13         Arnold D. Robbins     <arnold@skeeve.com>

	* filefuncs.3am, filefuncs.c, fnmatch.3am, fnmatch.c,
	fork.3am, fork.c, inplace.3am, inplace.c, intdiv.c,
	ordchr.3am, ordchr.c, readdir.3am, readdir.c, readdir_test.c,
	readfile.3am, readfile.c, revoutput.3am, revoutput.c,
	revtwoway.3am, revtwoway.c, rwarray.3am, rwarray.c,
	rwarray0.c, testext.c, time.3am, time.c: Update copyright year.

2018-03-07  gettextize  <bug-gnu-gettext@gnu.org>

	* Makefile.am (SUBDIRS): Add po.
	* configure.ac (AC_CONFIG_FILES): Add po/Makefile.in.
	* ABOUT-NLS: Updated.

2018-02-25         Arnold D. Robbins     <arnold@skeeve.com>

	* 4.2.1: Release tar ball made.

2018-02-23         Arnold D. Robbins     <arnold@skeeve.com>

	* configure.ac: Restore checking for PPC Macintosh before
	checking for MPFR. See README_d/README.macosx for info.

2018-02-21         Arnold D. Robbins     <arnold@skeeve.com>

	* configure.ac: Remove checking for PPC Macintosh before
	checking for MPFR. Installing a newer compiler on that
	system allows things to work.

2018-02-17         Michal Jaegermann     <michal.jnn@gmail.com>.

	* filefuncs.3am, filefuncs.c, fnmatch.3am, revoutput.3am,
	revtwoway.3am: Spelling and typo fixes.

2018-02-14         Arnold D. Robbins     <arnold@skeeve.com>

	* configure.ac: Add stuff for finding gettext. Helps in
	finding MPFR on some systems.
