@@ -1,4 +1,4 @@
-.TH READDIR 3am "Feb 02 2018" "Free Software Foundation" "GNU Awk Extension Modules"
+.TH READDIR 3am "Mar 17 2019" "Free Software Foundation" "GNU Awk Extension Modules"
 .SH NAME
 readdir \- directory input parser for gawk
 .SH SYNOPSIS
@@ -34,24 +34,14 @@ for a FIFO,
 .B l
 for a symbolic link,
 .B s
-for a socket, and
-.B u
-(unknown) for anything else.
+for a socket.
 .PP
-On systems without the file type information, the third field is always
+On systems without the file type information, the extension falls back
+to calling
+.IR stat (2),
+in order to provide the information.
+Thus the third field should never be
 .BR u .
-.SH NOTES
-On GNU/Linux systems, there are filesystems that don't support the
-.B d_type
-entry (see
-.IR readdir (3)),
-and so the file type is always
-.BR u .
-You can use the
-.I filefuncs
-extension to call
-.I stat()
-in order to get correct type information.
 .\" .SH BUGS
 .SH EXAMPLE
 .ft CW
@@ -81,7 +71,7 @@ BEGIN { FS = "/" }
 Arnold Robbins,
 .BR arnold@skeeve.com .
 .SH COPYING PERMISSIONS
-Copyright \(co 2012, 2013, 2018,
+Copyright \(co 2012, 2013, 2018, 2019
 Free Software Foundation, Inc.
 .PP
 Permission is granted to make and distribute verbatim copies of
