@@ -1,3 +1,9 @@
+2019-03-17         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* readdir.c: Change to use stat when dir info is 'u'. Bump version.
+	* readdir_test.c: Ditto.
+	* readdir.3am: Document same.
+
 2019-02-15         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* inplace.c (do_inplace_end): Fix error message to use inplace::end.
